feats: add paging and search by name,tags