@@ -7,12 +7,16 @@ import com.example.apollochallenge.entity.Tag;
 import com.example.apollochallenge.repository.CustomerRepository;
 import com.example.apollochallenge.repository.TagRepository;
 import com.example.apollochallenge.service.CustomerService;
+import jakarta.annotation.Nullable;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -23,46 +27,44 @@ public class CustomerServiceImpl implements CustomerService {
     private final ModelMapper modelMapper;
 
     @Override
-    public List<CustomerResponse> getAll() {
-        List<Customer> customers = customerRepository.findAll();
-        return customers.stream()
-            .filter(customer -> !customer.isDelete())
+    public Page<CustomerResponse> getAll(@Nullable List<String> keys, Pageable pageable) {
+        if (keys == null || keys.isEmpty()) {
+            Page<Customer> customersPage = customerRepository.findAll(pageable);
+            List<CustomerResponse> response = customersPage.getContent().stream()
+                .filter(customer -> !customer.isDelete())
+                .map(customer -> modelMapper.map(customer, CustomerResponse.class))
+                .toList();
+            return new PageImpl<>(response, pageable, customersPage.getTotalElements());
+        }
+        Page<Customer> customers = customerRepository.findCustomersByTagsTitleInOrNameIn(keys, keys, pageable);
+        List<CustomerResponse> response = customers
+            .stream()
             .map(customer -> modelMapper.map(customer, CustomerResponse.class))
-            .collect(Collectors.toList());
+            .toList();
+        return new PageImpl<>(response, pageable, response.size());
     }
 
     @Override
     public CustomerResponse getCustomer(Integer id) throws Exception {
         Customer customer = customerRepository.findById(id)
+            .filter(c -> !c.isDelete())
             .orElseThrow(() -> new Exception("Customer not found"));
         return modelMapper.map(customer, CustomerResponse.class);
     }
 
     @Override
-    public List<CustomerResponse> getCustomerByName(String name) {
-        List<Customer> customers = customerRepository.findCustomerByName(name);
-        return customers
-            .stream()
-            .map(customer -> modelMapper.map(customer, CustomerResponse.class))
-            .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<CustomerResponse> getCustomerByTags(List<Integer> tagsID) {
-        List<Customer> customers = customerRepository.findCustomersByTagsIn(tagsID);
-        return customers
-            .stream()
-            .map(customer -> modelMapper.map(customer, CustomerResponse.class))
-            .collect(Collectors.toList());
-    }
-
-    @Override
     public CustomerResponse createCustomer(CustomerRequest request) {
         Customer customer = new Customer();
-        List<Tag> tags = tagRepository.findAllById(request.getTagsID());
+        List<Tag> tags = new ArrayList<>();
+        request.getTags().forEach(title -> {
+            Tag tag = tagRepository.findByTitle(title);
+            if( tag == null) {
+                tagRepository.save(new Tag(title));
+            }
+             tags.add(tag);
+        });
         customer.setName(request.getName());
         customer.setTags(tags);
-
         customerRepository.save(customer);
         return modelMapper.map(customer, CustomerResponse.class);
     }
@@ -71,7 +73,7 @@ public class CustomerServiceImpl implements CustomerService {
     public CustomerResponse updateCustomer(Integer id, CustomerRequest request) throws Exception {
         Customer customer = customerRepository.findById(id)
             .orElseThrow(() -> new Exception("Customer not found"));
-        List<Tag> tags = tagRepository.findAllById(request.getTagsID());
+        List<Tag> tags = tagRepository.findTagByTitleIn(request.getTags());
         customer.setName(request.getName());
         customer.setTags(tags);
 
